hot fix for horizontal scroll issue on mobile

--- a/wp-content/themes/wptheme-lfb-0.2/src/styles/_shame.scss
+++ b/wp-content/themes/wptheme-lfb-0.2/src/styles/_shame.scss
@@ -188,3 +188,7 @@ body {
     }
   }
 }
+
+.tabs-container {
+  width: 100% !important;
+}
